styles.css
@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");

* {
  padding: 0;
  margin: 0;
  font-family: "Inter", sans-serif;
  color: #243e63;
}

body {
  max-width: 100vw;
  overflow-x: hidden;
}

html {
  scroll-behavior: smooth;
}

section {
  display: flex;
  padding: 0 32px;
  justify-content: center;
  align-items: center;
}

#landing {
  flex-direction: column;
}

nav {
  display: flex;
  height: 80px;
  width: 100%;
  justify-content: space-between;
  align-items: center;
  margin: 0 auto;
}

img {
  width: 100%;
}

p {
  line-height: 1.5;
}

a {
  display: inline;
  text-decoration: none;
}

a:hover {
  text-decoration: underline;
}

ul {
  display: flex;
}

li {
  list-style-type: none;
  padding-left: 16px;
}

header {
  display: flex;
  width: 100%;
  margin: auto 0;
}

footer {
  padding: 96px 32px;
  background-color: rgb(100, 21, 255);
  margin-bottom: -32px;
  position: relative;
  overflow: hidden;
  width: 100%; /* Sets the footer to full width */
  margin: 0; /* Removes any margins that could affect alignment */
}

.container {
  padding: 96px 0;
}

.row {
  width: 100%;
  max-width: 1200px;
  margin: 0 auto;
}

.btn {
  border-radius: 500px;
  border: none;
  background-color: #6415ff;
  color: #fff;
  font-size: 14px;
  font-weight: 700;
  line-height: 1.5;
  padding: 12px 32px;
  transition: all 300ms ease;
  cursor: pointer;
}

.purple {
  color: #6415ff;
}

.section__tag {
  font-size: 16px;
  font-weight: 700;
  color: #6415ff;
  letter-spacing: 1.6px;
  text-transform: uppercase;
}

.section__title {
  font-size: 48px;
  font-weight: 900;
  color: rgb(36, 62, 99);
  margin: 16px 0;
  letter-spacing: 0.025em;
}

.section__para {
  font-size: 18px;
  font-weight: 500;
  max-width: 576px;
  line-height: 1.625;
  letter-spacing: 0.025em;
  color: rgb(124, 139, 161);
  text-align: center;
}

#quality .section__para,
#values .section__para,
#testimonials .section__para {
  text-align: left;
}

/*LANDING SECTION*/

/*NAVBAR*/

.nav__row {
  width: 100%;
  max-width: 1200px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin: auto 0;
  margin-left: -20px;
  margin-right: -20px;
  padding-left: 20px;
}

.nav__logo {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin: 8px 0;
  padding-bottom: 4px;
}

.nav__logo--img {
  width: 40px;
  height: 40px;
}

.nav__logo--title {
  font-weight: 900;
  font-size: 24px;
  margin-left: 12px;
  padding-bottom: 2px;
  letter-spacing: 0.6px;
}

.nav__link {
  margin-left: 32px;
  padding-top: 4px;
  text-decoration: none;
  font-size: 14px;
  font-weight: 600;
  letter-spacing: 0.35px;
  border-bottom: 2px solid transparent;
  position: relative;
  transition: all 300ms;
}

.nav__link--primary {
  margin: 0;
  padding: 10px 32px;
  margin-top: 2px;
  border-radius: 9999px;
  color: #fff;
  background-color: #6415ff;
  line-height: 1.5;
  border: none;
  width: auto;
  transition: all 300ms ease;
}

.nav__link:hover {
  text-decoration: underline;
}

.nav__link--primary:hover {
  text-decoration: none;
}

.nav__links li:nth-child(5) {
  margin-left: 40px;
}

/*BURGER MENU BACKDROP*/

.btn__menu {
  background-color: transparent;
  font-size: 40px;
  text-align: center;
  border: none;
  display: none;
  transition: all 300ms ease;
}

.menu__backdrop {
  position: absolute;
  background-color: #fff;
  color: black;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: 100;
  justify-content: center;
  align-items: center;
  transition: all 300ms ease;
  visibility: hidden;
  opacity: 0;
  border: 1px solid rgb(229, 231, 235);
  border-radius: 8px;
}

.menu--open .menu__backdrop {
  visibility: visible;
  opacity: 1;
}

.menu--open {
  max-height: 100vh;
  overflow-y: hidden;
}

.menu__links {
  width: 100%;
  height: 100%;
  margin-top: 80px;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.menu__list {
  padding: 32px 0;
}

.menu__link {
  font-size: 18px;
  color: #1a202c;
  font-weight: 600;
  line-height: 1.5;
  margin: 8px;
  padding-bottom: 4px;
  border-bottom: 2px solid transparent;
}

.menu__link--primary {
  color: #f7fafc;
  padding: 12px 32px;
  background: #6415ff;
  border-radius: 500px;
  border: none;
}

.btn__menu--close {
  position: absolute;
  top: 24px;
  right: 18px;
  padding: 8px;
}

/*HEADER*/

header .row {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.header__description {
  width: 40%;
}

.header__description--para {
  font-size: 16px;
  color: #243e63;
  margin: 32px 0;
}

.header__email {
  width: 100%;
  max-width: 448px;
  height: 68px;
  position: relative;
  display: flex;
  justify-content: flex-end;
  align-items: center;
}

.header__email--input {
  /*width: 100%;*/
  border-radius: 500px;
  border: 2px solid rgb(229, 231, 235);
  padding: 20px 192px 20px 32px;
  color: rgb(36, 62, 99);
  font-size: 16px;
  font-weight: 500;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 1;
  transition: border-color 300ms;
}

.header__email--btn {
  position: relative;
  z-index: 2;
  margin: 8px;
  margin-left: auto;
  height: calc(100% - 16px);
  border-radius: 500px;
  width: 160px;
  border: none;
  background-color: #6415ff;
  color: #fff;
  font-weight: 700;
  font-size: 16px;
  cursor: pointer;
}

.header__customers--title {
  margin-top: 80px;
  color: #a0aec0;
  font-size: 12px;
  font-weight: 700;
  letter-spacing: 0.6px;
}

.header__customers--img {
  margin-top: 16px;
  padding-right: 128px;
  opacity: 0.5;
}

.header__img {
  width: 100%;
  max-width: 512px;
}

/*FEATURES SECTION*/

#features {
  position: relative;
}

#features .container {
  padding: 80px 0;
}

#features .row {
  width: 100%;
  max-width: 1024px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

#features .section__para {
  text-align: center;
}
/* ... */

